# DataAcquisitionTest1

./: CMakeLists.txt  config.json  development_plan.md  mainwindow - 副本.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  steps_plan.md  task_finished.md
Config/: ConfigManager.cpp  ConfigManager.h
Core/: Constants.h  DataTypes.h
Device/: AbstractDevice.cpp  AbstractDevice.h  DAQDevice.cpp  DAQDevice.h  DeviceManager.cpp  DeviceManager.h  ECUDevice.cpp  ECUDevice.h  ModbusDevice.cpp  ModbusDevice.h  VirtualDevice.cpp  VirtualDevice.h
Include/: Art_DAQ.h
Processing/: Channel.cpp  Channel.h  DataProcessor.cpp  DataProcessor.h  DataStorage.cpp  DataStorage.h  DataSynchronizer.cpp  DataSynchronizer.h  SecondaryInstrument.cpp  SecondaryInstrument.h
lib/: Art_DAQ.lib  Art_DAQ_64.lib
plot/: columnarinstrument.cpp  columnarinstrument.h  dashboard.cpp  dashboard.h
referance/: CMakeLists.txt  ECUTest.cpp  ECUTest.h  Sys.cpp  daqthread.cpp  daqthread.h
